# github-agent-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  policy.example.json  policy.waylon.example.json  pyproject.toml
.github/workflows/: release.yml  tests.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: main.test.tsx  main.tsx  styles.css
docs/: README.md  architecture.md  dashboard-github-oauth.md  development.md  failure-modes.md  installation.md  operations.md  policy-reference.md  releases.md  scope.md  shadow-canary.md  waylon-openclaw-setup.md
scripts/: github-agent-bridge-monitor-alert  github-agent-bridge-reader-run  waylon-executor-run.sh  waylon-reader-run.sh
src/github_agent_bridge/: __init__.py  actors.py  autoupdate.py  backend.py  cli.py  dashboard_data.py  dispatch.py  executor.py  feedback.py  github_notifications.py  models.py  monitor.py  monitor_alert.py  observability.py  parser.py  policy.py  process_inspection.py  queue.py  reader.py  reader_run.py  session_correlation.py  session_events.py  systemd_status.py
src/github_agent_bridge/dashboard_static/: index.html
src/github_agent_bridge/dashboard_static/assets/: charts-DDkbVjqp.js  charts-DRWoArYU.js  index-0FJ7egSV.js  index-0cTtkcqK.css  index-1psgLRRe.css  index-44fTEI9-.js  index-6pzqfJI3.js  index-7kZYTTBC.js  index-7lnYrLzx.js  index-9wHJGcGM.js  index-B1E1qc2z.js  index-B2fXYFwI.css  index-B3Ek65nc.css  index-B3WZFBcv.js  index-B4bxNuGq.js  index-B7bINyki.js  index-BABiTKNr.css  (+89 more)
src/github_agent_bridge/prompt_rules/: __init__.py  base.md  comment_value.md  feedback_classifier.md  feedback_learning.md  human_reviewer.md  pr_metadata.md  pr_review.md  prompt_injection.md  repo_instructions.md  review_only.md  sync_after_merge.md  worktree.md
src/github_agent_bridge/sql/: __init__.py  schema.sql
src/pilipilis_github_bridge/: __init__.py  cli.py
systemd/: env.example  github-agent-bridge-backend.service  github-agent-bridge-dashboard.service  github-agent-bridge-feedback.service  github-agent-bridge-feedback.timer  github-agent-bridge-monitor.service  github-agent-bridge-monitor.timer  github-agent-bridge-reader.service  github-agent-bridge-reader.timer  github-agent-bridge.service  pilipilis-github-bridge.service  waylon-github-agent-bridge-reader.service  waylon-github-agent-bridge-reader.timer  waylon-github-agent-bridge.service
tests/: conftest.py  test_actors.py  test_autoupdate.py  test_backend.py  test_cli_alias.py  test_executor.py  test_feedback.py  test_github_followup_detection.py  test_github_notifications.py  test_manual_enqueue_cli.py  test_modes_cli.py  test_monitor.py  test_monitor_alert.py  test_observability.py  test_packaged_resources.py  test_parser.py  test_policy.py  test_process_inspection.py  test_prompt_rules.py  test_queue.py  test_reader_run.py  test_scaffold.py  test_systemd_status.py
(+4 files in other folders)
