[project]
name = "github-agent-bridge"
version = "0.1.0"
description = "GitHub notification to OpenClaw agent bridge for Pilipilis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
github-agent-bridge = "github_agent_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
