[project]
name = "github-agent-bridge"
version = "0.19.0"
description = "GitHub notification to OpenClaw agent bridge for Pilipilis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29"]
test = ["pytest>=8", "fastapi>=0.110", "httpx>=0.27", "uvicorn>=0.29"]

[project.scripts]
gab = "github_agent_bridge.cli:main"
github-agent-bridge = "github_agent_bridge.cli:main"
github-agent-bridge-dashboard = "github_agent_bridge.backend:main"
github-agent-bridge-reader-run = "github_agent_bridge.reader_run:main"
github-agent-bridge-monitor-alert = "github_agent_bridge.monitor_alert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.semantic_release]
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false
